--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,6 +2,7 @@
 
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+    <script src="js/app.js"></script>
 </head>
 
 <body ng-app="myApp">
@@ -10,65 +11,5 @@
     <input type="file" file-model="myFile"/>
     <button ng-click="uploadFile()">upload me</button>
 </div>
-
-<script>
-    var myApp = angular.module('myApp', []);
-
-    myApp.directive('fileModel', ['$parse', function ($parse) {
-        return {
-            restrict: 'A',
-            link: function (scope, element, attrs) {
-                var model = $parse(attrs.fileModel);
-                var modelSetter = model.assign;
-
-                element.bind('change', function () {
-                    scope.$apply(function () {
-                        modelSetter(scope, element[0].files[0]);
-                    });
-                });
-            }
-        };
-    }]);
-
-    myApp.service('fileUpload', ['$http', function ($http) {
-        this.uploadFileToUrl = function (file, uploadUrl) {
-            var fd = new FormData();
-            fd.append('file', file);
-
-            var request = {
-                method: 'POST',
-                url: uploadUrl,
-                data: fd,
-                headers: {
-                    transformRequest: angular.identity,
-                    'Content-Type': undefined
-                }
-            };
-
-            // SEND THE FILES.
-            $http(request)
-                    .success(function (d) {
-                        console.log("success" + d);
-                    })
-                    .error(function () {
-                        console.log("error");
-                    });
-        }
-    }]);
-
-    myApp.controller('myCtrl', ['$scope', 'fileUpload', function ($scope, fileUpload) {
-        $scope.uploadFile = function () {
-            var file = $scope.myFile;
-
-            console.log('file is ');
-            console.dir(file);
-
-            var uploadUrl = "rest/upload";
-            fileUpload.uploadFileToUrl(file, uploadUrl);
-        };
-    }]);
-
-</script>
-
 </body>
 </html>
